--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "nuxt": "^3.13.2",
     "vue": "latest",
+    "vue-loading-overlay": "^6.0.6",
     "vue-router": "latest"
   },
   "devDependencies": {
