--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "nuxt": "^3.13.2",
+    "sweetalert2": "^11.14.5",
     "vue": "latest",
     "vue-loading-overlay": "^6.0.6",
     "vue-router": "latest"
